fix issue with background size on large screens and h3 text on small screens

--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ body {
 }
 
 .panel {
-  background-size: auto 100%;
+  /* background-size: auto 100%; */
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   height: 80vh;
